[package]
name = "crslab_comments_reptile"
version = "0.1.2"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] } # 根据需要调整特性
tokio = { version = "1.45.0", default-features = false, features = ["macros", "rt-multi-thread"] }
scraper = "0.23.1"
url = "2.5.4"

[profile.dev]
opt-level = "z"  # 优化大小 ("s" 也是一个选项)
lto = true         # 启用链接时优化 (Link Time Optimization)
codegen-units = 1  # 减少并行编译单元以启用更多优化

[profile.release]
opt-level = "z"  # 优化大小 ("s" 也是一个选项)
lto = true         # 启用链接时优化 (Link Time Optimization)
codegen-units = 1  # 减少并行编译单元以启用更多优化
panic = "abort"    # panic 时直接终止而不是展开堆栈 (减小大小)
strip = true       # 从二进制文件中移除符号信息
incremental = false # 有时可以通过确保完全重新构建来帮助减小大小